--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xmrig",
+  "name": "XNXX",
   "version": "3.0.0",
-  "description": "RandomX, CryptoNight and Argon2 miner",
+  "description": "W4RN1NG",
   "main": "index.js",
   "directories": {
     "doc": "doc"
@@ -11,13 +11,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xmrig/xmrig.git"
+    "url": "git+https://github.com/01348/xmrig.git"
   },
   "keywords": [],
   "author": "",
   "license": "GPLv3",
   "bugs": {
-    "url": "https://github.com/xmrig/xmrig/issues"
+    "url": "https://google.com/issues"
   },
-  "homepage": "https://github.com/xmrig/xmrig#readme"
+  "homepage": "https://google.com#readme"
 }
